# kinomata

./: .gitattributes  .gitignore  CMakeLists.txt  Kinomata.uplugin  build.bat  build.sh  run.sh
Source/FirstParty/KinomataLibrary/: KinomataLibrary.Build.cs  KinomataLibrary.cpp  KinomataLibrary.tps
Source/FirstParty/KinomataLibrary/Public/: KinomataLibrary.h
Source/Kinomata/: Kinomata.Build.cs
Source/Kinomata/Private/: Kinomata.cpp
Source/Kinomata/Public/: Kinomata.h
Source/KinomataLibrary/: KinomataLibrary.Build.cs  KinomataLibrary.cpp
Source/Private/: Kinomata.cpp
Source/Public/: Kinomata.h
_sdk/kinomata/: CMakeLists.txt  CMakePresets.json  build.bat  build.sh  run.sh
_sdk/kinomata/src/: CMakeLists.txt  main.cpp  msvc_debug_heap.cpp
_sdk/kinomata/src/include/: adaptors.hpp  api_provider.h  packet.hpp  types.h  world_sim_api_interface.h  zenoh_service.h
_sdk/kinomata/src/internal/: zenoh_service.cpp
_sdk/kinomata_tests/: CMakeLists.txt  CMakePresets.json  build.bat  build.sh  main.cpp  run.sh
_sdk/kinomata_tests/include/: common.hpp  open_cv_pub.hpp  packet_tests.hpp  world_sim_api.hpp
_sdk/pynomata/tests/: stream_images.py
_sdk/python/: pyproject.toml
_sdk/python/pynomata/: __init__.py  client.py  color_utils.py  common_types.py  packet.py  sensor_utils.py
_sdk/python/tests/: basic_image.py  spawn_tests.py  stream_images.py  test_client.py  test_packet.py
python-src/: requirements.txt
python-src/tests/: basic_image.py  simple.py  stream_images.py
src/: CMakeLists.txt  main.cpp
